	syntax = "proto3";

	option csharp_namespace = "Tienda.Autor.Api";

	package greet;

	service ImageService {
	  rpc SaveImage (SaveImageRequest) returns (SaveImageResponse);
	  rpc ObtenerImagenPorGuid (GuidRequest) returns (ImagenResponse);
	}

	message SaveImageRequest {
	  string guid = 1;
	  string name = 2;
	  bytes image = 3;
	}

	message SaveImageResponse {
	  bool success = 1;
	  string message = 2;
	}

	message GuidRequest {
	  string guid = 1;
	}

	message ImagenResponse {
	  bytes image = 1;
	  bool success = 2;
	  string error_message = 3;
	}
